<resources>
    <string name="app_name">Service Marketplace</string>
    <string name="activity_sign_up_title">Đăng ký</string>
    <string name="fragment_sign_up_vendor_label">Đăng ký Vendor</string>
    <string name="fragment_sign_up_customer_label">Đăng ký Customer</string>
    <string name="signup_name_hint">Họ và Tên</string>
    <string name="signup_email_hint">E-Mail</string>
    <string name="signup_password_hint">Mật khẩu</string>
    <string name="signup_conf_password_hint">Nhập lại mật khẩu</string>
    <string name="cancel_btn_text">Huỷ</string>
    <string name="signup_btn_text">Đăng ký</string>
    <string name="vendor_signup_switch_text">Đăng ký tài khoản Thợ / Nhà cung cấp dịch vụ</string>
    <string name="customer_signup_switch_text">Đăng ký tài khoản Khách hàng</string>
    <string name="signup_phone_number_hint">Số điện thoại</string>
    <string name="signup_vendor_name_hint">Họ và Tên / Tên doanh nghiệp</string>
    <string name="signup_address_hint">Địa chỉ</string>
    <string name="activity_sign_in_title">Đăng nhập</string>
    <string name="signin_btn_text">Đăng nhập</string>
    <string name="signin_signup_question_unclickable">Bạn không có tài khoản?</string>
    <string name="signin_signup_question_clickable">Đăng ký</string>
    <string name="vietnamdong"> VNĐ</string>
    <string name="vendor_my_services">DỊCH VỤ CỦA TÔI</string>
    <string name="edit_btn_text">CHỈNH SỬA</string>
    <string name="pro_details_delete_btn_desc">Xoá dịch vụ này</string>
    <string name="img_item_vendor_service">Hình ảnh dịch vụ</string>
    <string name="vendor_add_service">Thêm dịch vụ mới</string>
    <string name="add_new_service">Thêm dịch vụ mới</string>
    <string name="type_service_text">Loại dịch vụ</string>
    <string name="vendor_name_service_text">Tên dịch vụ</string>
    <string name="vendor_description_service_text">Mô tả dịch vụ</string>
    <string name="vendor_cost_service_text">Giá dịch vụ</string>
    <string name="vendor_contact_label_text">Số điện thoại</string>
    <string name="vendor_imge_label_text">Hình ảnh minh hoạ</string>
    <string name="add_service_btn_text">Thêm dịch vụ</string>
    <string name="add_images_label_text">Thêm hình ảnh cho dịch vụ</string>
    <string name="detail_service_app_tittle_text">CHI TIẾT DỊCH VỤ</string>
    <string name="vendor_text">Thợ</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="customer_address">Địa chỉ</string>
    <string name="customer_phone">Số điện thoại</string>
    <string name="order_service_text">ĐẶT LỊCH</string>
    <string name="order_dialog_title_text">Đặt lịch hẹn?</string>
    <string name="order_service_message_text">Bạn chắc chắn muốn đặt lịch dịch vụ này?</string>
    <string name="name_customer_emty_string">Vui lòng nhập tên khách hàng</string>
    <string name="phone_customer_emty_string">Vui lòng nhập SĐT</string>
    <string name="address_customer_emty_string">Vui lòng nhập địa chỉ</string>
    <string name="order_dialog_btn_text">Đặt lịch</string>
    <string name="full_order_schedule">Thợ đã hết lịch trống</string>
    <string name="date_order">Ngày đặt lịch</string>
    <string name="rating_view_text">Xem đánh giá</string>
    <string name="search_placeholder_text">Tìm kiếm dịch vụ</string>
    <string name="view_on_map_text">Bản đồ</string>
    <string name="home_sort_text">Sắp xếp</string>
    <string name="home_filter_text">Lọc:</string>
    <string name="home_type_service_text">Loại</string>
    <string name="home_price_service_text">Giá</string>
    <string name="home_sorting_text">Sắp xếp:</string>
    <string name="all_service">Tất cả dịch vụ</string>
    <string name="none_sorting">Không</string>
    <string name="price_accending">Giá tăng dần</string>
    <string name="price_descending">Giá giảm dần</string>
    <string name="rating_accending">Sao tăng dần</string>
    <string name="rating_descending">Sao giảm dần</string>
    <string name="none_service_found">Không tìm thấy dịch vụ nào</string>
    <string name="bottom_nav_home_label">Trang chủ</string>
    <string name="bottom_nav_chat_label">Dịch vụ</string>
    <string name="bottom_nav_my_services_label">Dịch vụ</string>
    <string name="bottom_nav_my_order_label">Đơn đặt</string>
    <string name="bottom_nav_my_account">Tài khoản</string>
    <string name="bottom_nav_activity_text">Hoạt động</string>
    <string name="bottom_nav_credit">Thanh toán</string>
    <string name="map_app_tittle_text">DỊCH VỤ GẦN ĐÂY</string>
    <string name="name_service_emty_string">Vui lòng nhập tên dịch vụ</string>
    <string name="description_service_emty_string">Vui lòng nhập mô tả dịch vụ</string>
    <string name="cost_service_emty_string">Vui lòng nhập giá dịch vụ</string>
    <string name="contact_service_emty_string">SĐT không được trống và đúng định dạng</string>
    <string name="image_service_emty_string">Vui lòng nhập hình ảnh dịch vụ</string>
    <string name="save_edit_string">Lưu</string>
    <string name="edit_tittle_string">Chỉnh sửa dịch vụ</string>
    <string name="negotiate_text">Thương lượng</string>
    <string name="cost_text">Nhập giá</string>
    <string name="delete_dialog_title_text">Xoá dịch vụ này?</string>
    <string name="delete_service_message_text">Bạn không thể khôi phục dịch vụ này nếu xoá</string>
    <string name="pro_cat_dialog_cancel_btn">Huỷ bỏ</string>
    <string name="delete_dialog_delete_btn_text">Chấp nhận</string>
    <string name="mange_order_app_tittle_text">QUẢN LÝ ĐƠN DỊCH VỤ</string>
    <string name="order_on_text">Thời gian đặt: January 1, 2021</string>
    <string name="price_card_divider_desc">Mô tả dịch vụ</string>
    <string name="name_customer_text">Tên khách hàng</string>
    <string name="name_vendor_text">Tên thợ</string>
    <string name="status_order_text">Trạng thái</string>
    <string name="complete_order_text">Hoàn thành</string>
    <string name="time_order_text">Lịch hẹn</string>
    <string name="price_order_text">Giá tiền</string>
    <string name="all_tab_text">Tất cả</string>
    <string name="accept_tab_text">Đang chờ</string>
    <string name="on_board_tab_text">Tiến Hành</string>
    <string name="complete_tab_text">Hoàn thành</string>
    <string name="cancel_tab_text">Đã huỷ</string>
    <string name="order_detail_top_app_bar_text">CHI TIẾT ĐƠN DỊCH VỤ</string>
    <string name="products_label_text">Dịch vụ</string>
    <string name="add_img_item_desc">Ảnh dịch vụ</string>
    <string name="information_vendor_text">Thông tin thợ</string>
    <string name="shipping_details_label_text">Chi tiết dịch vụ</string>
    <string name="change_status_label_text">Change Order Status Button</string>
    <string name="ship_date_text">Thời gian đến</string>
    <string name="shipping_address_label_string">Địa chỉ</string>
    <string name="ship_curr_status_label_text">Trạng thái hiện tại</string>
    <string name="payment_details_label_text">Tổng giá phải trả</string>
    <string name="price_card_shipping_label_string">Chi phí đi lại</string>
    <string name="price_service">Giá dịch vụ</string>
    <string name="price_card_charges_label_text">Chi phí khác</string>
    <string name="noti_for_user">Thông báo</string>
    <string name="titleDayEdit">Nhập ngày đặt lịch</string>
    <string name="pro_details_like_btn_desc">Like Button</string>
    <string name="product_detail_image_desc">"ImageDescription "</string>
    <string name="NOTIFICATION">Thông báo</string>
    <string name="accept_order_text">Xác nhận</string>
    <string name="cancle_order_text">Từ chối</string>
    <string name="cancle_order_for_customer">Huỷ đặt lịch</string>
    <string name="cancel_order_title_text">Huỷ đơn đặt?</string>
    <string name="cancel_order_message_text">Bạn có chắc chắn huỷ đơn dịch vụ này chứ?</string>
    <string name="accept_btn_text">Xác nhận</string>
    <string name="success_message">Hoàn tất</string>
    <string name="confirm_service_success">Xác nhận hoàn tất</string>
    <string name="is_success_service_title">Hoàn tất?</string>
    <string name="is_success_service_message">Bạn đã hoàn thành đơn này cho khách?</string>
    <string name="exist_document">Bạn đã có đơn phải làm trong ngày này, đơn này sẽ tự động huỷ!</string>
    <string name="none_service_order_found">Không tìm thấy đơn dịch vụ nào</string>
    <string name="evalue_service">Đánh giá</string>
    <string name="evalue_service_success">Đánh giá dịch vụ thành công</string>
    <string name="service_order">Đơn dịch vụ</string>
    <string name="order_service_state">Thông báo trạng thái dịch vụ</string>
    <string name="service_order_accepted">đã được xác nhận và thợ sẽ đến đúng ngày hẹn</string>
    <string name="service_order_canceled_by_vendor">đã bị huỷ do thợ đã có lịch hẹn vào ngày</string>
    <string name="service_order_completed">đã được hoàn thành</string>
    <string name="customer_text">Khách hàng</string>
    <string name="ordered_service">đã đặt dịch vụ</string>
    <string name="canceled_service">đã huỷ dịch vụ</string>
    <string name="new_order_service">Thông báo đơn dịch vụ mới</string>
    <string name="home_top_app_bar_text">TRANG CHỦ</string>
    <string name="take_schedule">ĐẶT LỊCH</string>
    <string name="personal_information_top_app_bar_text">Thông tin cá nhân</string>
    <string name="user_profile_top_app_bar_text">Người dùng</string>
    <string name="role_label_text">Người dùng</string>
    <string name="rating_label_text">Đánh giá</string>
    <string name="following_label_text">Đang theo dõi</string>
    <string name="change_pasword_top_app_bar_text">ĐỔI MẬT KHẨU</string>
    <string name="change_password_label_text">THAY ĐỔI MẬT KHẨU</string>
    <string name="cancel_change_password_text">Huỷ bỏ</string>
    <string name="new_password_hint_label">Nhập mật khẩu mới</string>
    <string name="current_password_hint_label">Nhập mật khẩu hiện tại</string>
    <string name="confirm_password_hint_label">Nhập lại mật khẩu mới</string>
    <string name="current_password_label_text">Mật khẩu hiện tại</string>
    <string name="new_password_label_text">Mật khẩu mới</string>
    <string name="confirm_password_label_text">Xác nhận mật khẩu</string>
    <string name="change_password_btn_text">Thay đổi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer">Khách hàng</string>
    <string name="MESSAGE">TIN NHẮN</string>
    <string name="sorting_top_app_bar_text">SẮP XẾP</string>
    <string name="sorting_according_label">Sắp xếp theo:</string>
    <string name="sorting_according_price">Giá</string>
    <string name="sorting_according_rating">Sao</string>
    <string name="sorting_type_label">Loại sắp xếp:</string>
    <string name="sorting_descending_text">Giảm dần</string>
    <string name="sorting_ascending_text">Tăng dần</string>
    <string name="cancle_text">Bỏ chọn</string>
    <string name="notification_check_radio_group">Xin mời chọn loại và cách sắp xếp</string>
    <string name="noti_top_bar">Thông báo</string>
    <string name="commnication_app_tittle_text">HOẠT ĐỘNG</string>
    <string name="notification_text_label">Thông báo</string>
    <string name="message_text_label">Tin nhắn</string>
    <string name="filter_radius_text">Bán kính</string>
    <string name="filter_service_text">Dịch vụ</string>
    <string name="filter_radius_content"> </string>
    <string name="filter_service_content"> </string>
    <string name="rating_app_tittle_text">ĐÁNH GIÁ DỊCH VỤ</string>
    <string name="message_feedback_label">Nhập đánh giá của bạn:</string>
    <string name="send_btn">Gửi</string>
    <string name="empty_message_feedback">Xin mời nhập đánh giá cho sản phẩm</string>
    <string name="empty_rating_textview">Chưa có đánh giá nào về dịch vụ này</string>
    <string name="report_top_bar">PHẢN HỒI VỀ APP</string>
    <string name="report_success">Phản hồi về ứng dụng thành công</string>
    <string name="vendor_information">THÔNG TIN THỢ</string>
</resources>