<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_customer_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_outlined_home_24"
        android:title="@string/bottom_nav_home_label"/>

    <item
        android:id="@+id/home_vendor_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_vendor_my_services"
        android:title="@string/bottom_nav_my_services_label"/>

<!--    <item-->
<!--        android:id="@+id/orderServiceVendorFragment"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_outline_library_books_24"-->
<!--        android:title="@string/bottom_nav_my_order_label" />-->

    <item
        android:id="@+id/orderServiceFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_library_books_24"
        android:title="@string/bottom_nav_my_order_label" />
    <item
        android:id="@+id/profile_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_outlined_person_24"
        android:title="@string/bottom_nav_my_account"/>
</menu>